# AgriNav

./: LICENSE  README.md  allfiles.txt
Common/Common/DataTypes/: RadioTypes.hpp  TelemetryPacket.hpp
Common/Common/Math/: Rotation.hpp  Trajectory.hpp  Vec3.hpp
Components/: CMakeLists.txt
Components/Components/DepthImagePlanner/: DepthImagePlanner.cpp  DepthImagePlanner.hpp  MonotonicTrajectory.hpp  Pyramid.hpp
Components/Components/Logic/: KalmanFilter6DOF.cpp  PanicReason.hpp  QuadcopterConstants.hpp  QuadcopterLogic.cpp  QuadcopterLogic.hpp  QuadcopterMixer.hpp  TiltrotorController.hpp
Components/Components/Offboard/: MocapStateEstimator.cpp  MocapStateEstimator.hpp  QuadcopterController.cpp  QuadcopterController.hpp  SafetyNet.hpp  VIOStateEstimator.cpp  VIOStateEstimator.hpp
Components/Components/Simulation/: Quadcopter_T.cpp  Quadcopter_T.hpp  SimulationObject6DOF.hpp  UWBNetwork.cpp  UWBRadio.hpp
Components/Components/TrajectoryGenerator/: RapidTrajectoryGenerator.cpp  RapidTrajectoryGenerator.hpp  SingleAxisTrajectory.cpp  TrajectoryGenerator.hpp
ROS/: README
ROS-TCP-Endpoint/launch/: endpoint.launch
ROS/hiperlab_components/: CMakeLists.txt
ROS/hiperlab_hardware/: CMakeLists.txt
ROS/hiperlab_hardware/src/crazyradio/: cfclient.h  cfradio.h  client.c  crtp.h  main.cpp  radio.c  readme
ROS/hiperlab_hardware/src/esp_radio/: main.cpp
ROS/hiperlab_hardware/src/joystick/: joystickmain.cpp
ROS/hiperlab_hardware/src/keyboard/: keyboardmain.cpp
ROS/hiperlab_hardware/src/mocap_optitrack/config/: mocap.yaml
ROS/hiperlab_hardware/src/mocap_optitrack/include/mocap_optitrack/: mocap_datapackets.h
ROS/hiperlab_hardware/src/mocap_optitrack/launch/: mocap.launch
ROS/hiperlab_hardware/src/mocap_optitrack/src/: mocap_config.cpp  mocap_datapackets.cpp  mocap_node.cpp
ROS/hiperlab_rostools/: CMakeLists.txt  package.xml
ROS/hiperlab_rostools/msg/: LoopPoseData.msg  planner_diagnostics.msg  polynomial_trajectory.msg  telemetry.msg
ROS/hiperlab_rostools/src/DEMO_ThrowAndRecover/: VehicleStateMachine_demoThrow.cpp  VehicleStateMachine_demoThrow.hpp  main.cpp
ROS/hiperlab_rostools/src/DEMO_UltraWideBand/: VehicleStateMachine_UWBDemo.cpp  VehicleStateMachine_UWBDemo.hpp  main.cpp
ROS/hiperlab_rostools/src/JoystickAccelerationControl/: main.cpp
ROS/hiperlab_rostools/src/MocapToRviz/: MocapToRviz_main.cpp
ROS/hiperlab_rostools/src/QuadEvaluator/: QuadEvaluatorStateMachine.cpp  QuadEvaluatorStateMachine.hpp  main_QuadEvaluator.cpp
ROS/hiperlab_rostools/src/QuadManualControl/: main.cpp
ROS/hiperlab_rostools/src/QuadManualHybridControl/: main.cpp
ROS/hiperlab_rostools/src/QuadMocapAccelerationControl/: main.cpp
ROS/hiperlab_rostools/src/QuadMocapPropellerCalibration/: main_QuadMocapPropellerCalibration.cpp
ROS/hiperlab_rostools/src/QuadMocapRatesControl/: ExampleVehicleStateMachine.cpp  ExampleVehicleStateMachine.hpp  main.cpp
ROS/hiperlab_rostools/src/QuadMocapSpeedsControl/: main.cpp
ROS/hiperlab_rostools/src/QuadMocapTiltrotorControl/: main.cpp
ROS/hiperlab_rostools/src/QuadMocapVIOInit/: ExampleVehicleStateMachine.cpp  main.cpp
ROS/hiperlab_rostools/src/QuadOutdoorControl/: main.cpp
ROS/hiperlab_rostools/src/QuadRappidsRatesControl/: ExampleVehicleStateMachine.cpp  ExampleVehicleStateMachine.hpp  main.cpp
ROS/hiperlab_rostools/src/QuadVIORatesControl/: ExampleVehicleStateMachine.cpp  ExampleVehicleStateMachine.hpp  main.cpp
ROS/hiperlab_rostools/src/Simulator/: main.cpp
ROS/hiperlab_rostools/src/SyncSimulator/: main.cpp
ROS/hiperlab_rostools/src/TestMotors/: main.cpp
ROS/hiperlab_rostools/src/TestMotorsIndividual/: main.cpp
ROS/hiperlab_rostools/src/TestMotorsIndividualTimed/: main.cpp
ROS/hiperlab_rostools/src/TestMotorsTimed/: main.cpp
ROS/hiperlab_rostools/src/VehicleMonitor/: VehicleMonitor.cpp  main.cpp
ROS/hiperlab_rostools/src/bagAutorecorder/: bagAutorecorder.sh
ROS/rappids_planner/: CMakeLists.txt  package.xml
ROS/rappids_planner/config/: rappids_perception_aware_config.yaml  rappids_single_image_test.yaml
ROS/rappids_planner/include/math/: rotation.hpp  trajectory.hpp
ROS/rappids_planner/include/rappids/: depth_image_planner.hpp  monotonic_trajectory.hpp  pyramid.hpp  rapid_trajectory_generator.hpp  single_axis_trajectory.hpp
ROS/rappids_planner/launch/: rappids_perception_aware.launch  single_image_test.launch  visualize_experiment.launch
ROS/rappids_planner/msg/: drone_status.msg  planner_diagnostics.msg
ROS/rappids_planner/scripts/: gazebo_sim.rviz  rappids_experiment.rviz  rappids_ros.rviz  record_topics.bash
ROS/rappids_planner/src/: depth_image_planner.cpp  quartic.cpp  rapid_trajectory_generator.cpp  single_axis_trajectory.cpp
ROS/rappids_planner/src/features_publisher/: main.cpp
ROS/rappids_planner/src/perception_aware/: rappids_perception_aware.cpp  rappids_perception_aware.hpp
ROS/rappids_planner/src/perception_aware_modified/: main.cpp
ROS/rappids_planner/src/perception_aware_new/: main.cpp  rappids_perception_aware.cpp  rappids_perception_aware.hpp
ROS/rappids_planner/src/rtabmap_odom/: main.cpp
ROS/rappids_planner/src/single_image_test/: single_image_test.cpp
ROS/rappids_planner/src/tf_publisher/: main.cpp
Unity Simulator/: .gitignore
Unity Simulator/Assets/: New Terrain 1.asset  New Terrain.asset  blue.mat  white.mat
Unity Simulator/Assets/Models/: NewLayer 2.terrainlayer  black.mat
Unity Simulator/Assets/Scenes/: Simulator Example.unity
Unity Simulator/Assets/Scripts/: DepthImagePublisher.cs  PathDuplicator.cs  RGBImagePub.cs  RightImagePub.cs  StereoImagePub.cs  TubeRendererCSV.cs  depthShader.shader
Unity Simulator/Assets/StreamingAssets/: estimator110_trimmed.csv  simulator_truth110_trimmed.csv
Unity Simulator/UserSettings/: EditorUserSettings.asset
Unity Simulator/UserSettings/Layouts/: default-2021.dwlt
